# pwmp-msg

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
benches/: deserialization.rs  serialization.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: version.rs
src/: aliases.rs  kick.rs  lib.rs  mac.rs  request.rs  response.rs  settings.rs  version.rs
src/internal_serde/: deserializer.rs  mod.rs  serializer.rs
src/serde/: base.rs  consts.rs  deserializer.rs  error.rs  mod.rs  serializer.rs  utils.rs
src/settings/: mod.rs  names.rs  values.rs
tests/: request_deserialization.rs  request_serialization.rs  response_deserialization.rs  response_serialization.rs  version.rs
