[package]
name = "pwmp-msg"
version = "2.1.3"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "Provides the types representing all messages in the PixelWeather Messaging Protocol."
rust-version = "1.84"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-msg"

[dependencies]
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
postcard = { version = "1.1.1", default-features = false, features = [
    "use-std",
] }
rust_decimal = { version = "1.37.1", default-features = false, features = [
    "std",
    "serde",
    "serde-bincode", # serde-str -> for postcard
] }
rust_decimal_macros = { version = "1.37.1", features = ["reexportable"] }
serde = { version = "1.0.219", features = ["derive"] }
