[package]
name = "pwmp-msg"
version = "2.1.8"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "Provides the types representing all messages in the PixelWeather Messaging Protocol."
rust-version = "1.84"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-msg"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
derive_more = { version = "2.0.1", default-features = false, features = [
    "debug",
] }
