[package]
name = "pwmp-msg"
version = "2.1.10"
edition = "2021"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "Provides the types representing all messages in the PixelWeather Messaging Protocol."
rust-version = "1.93"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-msg"

[[bench]]
name = "serialization"
harness = false

[dependencies]
derive_more = { version = "2.1.1", default-features = false, features = [
    "debug",
] }
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
